force-app/main/default/objects/PricebookEntry/fields/ISO_Symbol__c.field-meta.xml
<CustomField>
    <fullName>ISO_Symbol__c</fullName>
    <formula>IF( ISPICKVAL(CurrencyIsoCode, 'USD'), "$",
IF( ISPICKVAL(CurrencyIsoCode, 'SGD'), "$",
IF( ISPICKVAL(CurrencyIsoCode, 'JPY'), "¥",
IF( ISPICKVAL(CurrencyIsoCode, 'GBP'), "£",
NULL))))</formula>
    <label>ISO Symbol</label>
    <type>Text</type>
</CustomField>