force-app/main/default/objects/PricebookEntry/fields/Product_Selection_View__c.field-meta.xml
<CustomField>
    <fullName>Product_Selection_View__c</fullName>
    <formula>Product2.Name&amp;" ("&amp;ISO_Symbol__c&amp; 
IF(CONTAINS(TEXT(UnitPrice), "."),TEXT(UnitPrice),TEXT(UnitPrice)&amp;".00")&amp;")"</formula>
    <label>Product Selection View</label>
    <type>Text</type>
</CustomField>